fix(CTASection): grid alignment grid alignment of 4 columns

--- a/packages/styles/scss/components/ctasection/_ctasection.scss
+++ b/packages/styles/scss/components/ctasection/_ctasection.scss
@@ -33,6 +33,9 @@
       @include carbon--breakpoint('md') {
         padding-bottom: $carbon--layout-06;
       }
+      @include carbon--breakpoint('sm') {
+        padding-bottom: $carbon--layout-05;
+      }
     }
 
     .#{$prefix}--content-block {
